<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/GPS_Parameter">
		<com.hlidskialf.android.preference.SeekBarPreference android:title="@string/GPS_Accuracy"
			android:key="GPSAccuracy"
			android:summary="@string/GPS_Accuracy_Summary"
			android:dependency="cell_checkbox"
			android:persistent="true"
			android:dialogMessage="@string/Distance_Summary"
			android:text="@string/meters_abbreviation"
			android:max="100"
			android:defaultValue="20"
			android:dialogTitle="@string/GPS_Title_Box" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/Cell_Parameter">
		<CheckBoxPreference android:title="@string/Activate_Cell" android:key="cell_checkbox"
			android:summaryOn="@string/Activate_Cell_Activated"
			android:summaryOff="@string/Activate_Cell_Disabled"
			android:persistent="true"
			android:defaultValue="true" />
		<com.hlidskialf.android.preference.SeekBarPreference android:title="@string/Cell_Filter"
			android:key="CellFilter"
			android:summary="@string/Cell_Filter_Summary"
			android:dependency="cell_checkbox"
			android:persistent="true"
			android:dialogMessage="@string/Distance_Summary"
			android:text="@string/meters_abbreviation"
			android:max="100"
			android:defaultValue="10"
			android:dialogTitle="@string/Cell_Title_Box" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/Wifi_Parameter">
		<CheckBoxPreference android:title="@string/Activate_Wifi" android:key="wifi_checkbox"
			android:summaryOn="@string/Activate_Wifi_Activated"
			android:summaryOff="@string/Activate_Wifi_Disabled"
			android:persistent="true"
			android:defaultValue="true" />
		<com.hlidskialf.android.preference.SeekBarPreference android:title="@string/Wifi_Filter"
			android:key="WifiFilter"
			android:summary="@string/Wifi_Filter_Summary"
			android:dependency="wifi_checkbox"
			android:persistent="true"
			android:dialogMessage="@string/Distance_Summary"
			android:text="@string/meters_abbreviation"
			android:max="100"
			android:defaultValue="5"
			android:dialogTitle="@string/Wifi_Title_Box" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/MeasurePlace_Parameter">
		<EditTextPreference android:title="@string/Login" android:key="MeasurePlace_login"
			android:summary="@string/MeasurePlace_login_Activated"
			android:dialogTitle="Enter MeasurePlace login"
			android:defaultValue="admin"/>
		<EditTextPreference android:title="@string/Password" android:key="MeasurePlace_password"
			android:summary="Mot de passe"
			android:password="true"
			android:dialogTitle="Enter MeasurePlace password"
			android:defaultValue="admin"/>
	</PreferenceCategory>
</PreferenceScreen>