<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TextView android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:text="@string/nbCellularFilesToSend" />
			<TextView android:id="@+id/nbCellularFilesToSend"
				android:layout_width="wrap_content" android:layout_height="fill_parent"
				android:text="@string/noFileToUpload" />
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TextView android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:text="@string/nbWifiFilesToSend" />
			<TextView android:id="@+id/nbWifiFilesToSend"
				android:layout_width="wrap_content" android:layout_height="fill_parent"
				android:text="@string/noFileToUpload" />		
	</LinearLayout>
	</LinearLayout>
</ScrollView>    